[gd_scene load_steps=5 format=2]

[ext_resource path="res://MainMenu/BaseMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://MainMenu/LoadSave.gd" type="Script" id=2]
[ext_resource path="res://MainMenu/SaveHolderHolder.gd" type="Script" id=3]
[ext_resource path="res://MainMenu/UIButtonBase.tscn" type="PackedScene" id=4]

[node name="LoadSave" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Title" parent="MarginContainer/MenuContainer" index="0"]
text = "Load Save"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/MenuContainer" index="1"]
margin_right = 984.0
margin_bottom = 502.0

[node name="SaveHolderHolder" type="Container" parent="MarginContainer/MenuContainer/ScrollContainer" index="0"]
script = ExtResource( 3 )

[node name="BackButtonHolder" type="Control" parent="MarginContainer" index="1"]
margin_right = 984.0
margin_bottom = 560.0
mouse_filter = 2

[node name="BackButton" parent="MarginContainer/BackButtonHolder" index="0" groups=["Buttons", "TransitionTarget"] instance=ExtResource( 4 )]
margin_top = 537.0
margin_right = 39.0
margin_bottom = 560.0
rect_pivot_offset = Vector2( 0, 23 )
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Back"

[node name="Tween2" type="Tween" parent="." index="2"]

[connection signal="appearing" from="." to="." method="_on_LoadSave_appearing"]
[connection signal="disappearing" from="." to="." method="_on_LoadSave_disappearing"]
